# TK_2313

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  reviewers.yml
.github/workflows/: auto_request_review.yml
backend/: .env.default  Dockerfile  README.md  docker-compose.yaml  local-dev.yaml  pyproject.toml
backend/api/: .env  app.py  handler.py  pyproject.toml
backend/api/mychatgpt/: __init__.py
backend/api/prompt/: hard_takanawa.txt
backend/api/services/: ChatGPT_call.py  speakers.json  test.py  voicevox_call.py  whisper_call.py
backend/script/: ws-client.py
